# netbird-exit-node

./: .gitignore  README.md  flake.nix  netbird-exit-node-applet.desktop  pyproject.toml
netbird_exit_node/: __init__.py  applet.py  config.py  main.py  menu.py
